=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.09 - In development

=over

=item *

Added C<--category-links> option to F<bin/krang_create_story>
script. [Michael Peters]

=item *

Media Bulk Upload can set a max height and/or max width to scale down
large images. [Brad Oaks]

=item *

Added C<Krang.Form.get_form()> method to make it easier to get the
form in custom Javascript code. [Michael Peters]

=item *

Added C<update> (which defaults to C<true>) option to C<Krang.Form.submit()>
to make it easier for addons to create forms which submit and return JSON data. [Michael Peters]

=item *

Added ability to search Media by C<Type> (which is C<media_type_id>). [Brad Oaks]

=item *

Fixed ISE that occurs on the Back button when viewing an older version of a template that you have checked out.
It only happened when starting from Workspace and editing a template.  The form action was set to workspace.pl
instead of template.pl in that case.  [Brad Oaks]

=back

=head2 3.08 - December 20, 2009

=over

=item *

Media items now call the element's C<retire_hook>. [Michael Peters]

=item *

Added C<may_view_trash> permission. [Michael Peters]

=item *

Fixed ISEs that occurs if you try to check out media or templates
that were checked out by someone else while you were looking at
(normally prevented by the UI). Now you get a helpful alert message
instead. [Michael Peters]

=item *

Fixed ISE on "New Media" screen when submitting the form via "enter"
instead of clicking the "Create" button. [Michael Peters]

=item *

Going from Trash -> View Detail -> View Log -> Back for Media objects
no longer results in an ISE. [Michael Peters]

=item *

Catch more kinds of template errors when previewing a story so they
don't result in an ISE, but a better error message. [Michael Peters]

=item *

Added Fedora 12 as a build target. [Michael Peters]

=back

=head2 3.07 - November 5, 2009

=over

=item * 
