@@ -27,6 +27,7 @@ CREATE TABLE media (
     retired                 bool NOT NULL DEFAULT 0,
     trashed                 bool NOT NULL DEFAULT 0,
     published               bool NOT NULL DEFAULT 0,
+    read_only               bool NOT NULL DEFAULT 0,
     PRIMARY KEY (media_id),
     KEY (category_id), KEY (media_type_id),
     KEY (url), KEY (title),
